@@ -1,6 +1,9 @@
   * Tweaked the SOLID_PANE renderer to not overlap with overhead blocks
   * Tweaked the FENCE_GATE renderer to not overlap with adjacent blocks,
     for open gates.
+  * Support for all Beta 1.9 blocks
+  * Improved rendering for crops (though transparency issues continue to
+    occur)
 
 Minecraft X-Ray 3.3.2 (2011.09.20)
 
